<resources>
    <string name="app_name">Обменник валют</string>
    <string name="currency_example">RUB</string>
    <string name="makefavorite">MakeFavorite</string>
    <string name="data_text">Дата обнов. валют</string>
    <string name="update_text">Обновить</string>
    <string name="backText">Назад</string>
    <string name="value_example">RUB</string>
    <string name="number_example">1000</string>
    <string name="updatelist">updateList</string>
    <string name="exchangeswapbutton">exchangeSwapButton</string>
    <string name="currentDateName">Проверка обнов:</string>
    <string name="dateUpdateName">Обнов. валют:</string>
    <string name="exchange">Обменять</string>
    <string name="eur">EUR</string>
    <string name="date_example">01.01.2022</string>
    <string name="change">Изменить</string>
    <string name="historyItemExample">1 RUB</string>
    <string name="filtersHeader">Фильтры по датам</string>
    <string name="arrow">arrow</string>
    <string name="radioAll">За всё время</string>
    <string name="radioMonth">За последний месяц</string>
    <string name="redioWeek">За последнюю неделю</string>
    <string name="filterButton">Применить</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>