<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <Button
        android:id="@+id/buttonBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/backText"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginVertical="@dimen/main_margin_vertical"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/filterButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/filterButton"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        android:paddingVertical="12dp"
        android:layout_marginBottom="10dp"
        tools:ignore="MissingConstraints" />


    <RadioGroup
        android:id="@+id/radioButtonGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonBack">

        <RadioButton
            android:id="@+id/radioButtonAll"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/main_margin_vertical"
            android:text="@string/radioAll"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/radioButtonMonth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/main_margin_vertical"
            android:text="@string/radioMonth"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/radioButtonWeek"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/main_margin_vertical"
            android:text="@string/redioWeek"
            android:textColor="@color/black"
            android:textSize="20sp" />
    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>

