<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/buttonBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/backText"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/firstCurrencyName"
        android:layout_marginVertical="@dimen/main_margin_vertical"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/firstCurrencyName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/value_example"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonBack"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="@dimen/main_margin_vertical"
        android:layout_marginStart="@dimen/textValueLeft"
        tools:ignore="MissingConstraints" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/valueInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/firstCurrencyName"
        android:layout_marginVertical="@dimen/main_margin_vertical"
        android:inputType="number"
        tools:ignore="MissingConstraints" />

    <ImageButton
        android:id="@+id/exchangeSwapButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:paddingTop="35dp"
        android:paddingBottom="35dp"
        android:src="@drawable/ic_exchange_swap"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/valueInput"
        tools:ignore="MissingConstraints"
        android:contentDescription="@string/exchangeswapbutton" />

    <TextView
        android:id="@+id/secondValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/main_margin_vertical"
        android:text="@string/number_example"
        android:textColor="@color/black"
        android:textSize="28sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/exchangeSwapButton"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/secondCurrencyName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/main_margin_vertical"
        android:text="@string/eur"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/secondValue"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/exchangeButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/exchange"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        android:paddingVertical="12dp"
        android:layout_marginBottom="10dp"
        tools:ignore="MissingConstraints" />


</androidx.constraintlayout.widget.ConstraintLayout>

