<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/rowLayout"
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    android:layout_marginTop="10dp"
    >

    <TextView
        android:id="@+id/historyDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/date_example"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginEnd="5dp"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="30dp"
        android:background="@color/main"
        android:paddingHorizontal="20dp"
        android:paddingVertical="15dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginBottom="5dp">


        <TextView
            android:id="@+id/firstCurrency"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/historyItemExample"
            android:textColor="@color/black"
            android:textSize="@dimen/history_size"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/arrowImageView"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:contentDescription="@string/arrow"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/secondCurrency"
            app:layout_constraintStart_toEndOf="@+id/firstCurrency"
            app:layout_constraintTop_toTopOf="parent"
            android:src="@drawable/ic_arrow" />

        <TextView
            android:id="@+id/secondCurrency"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/historyItemExample"
            android:textColor="@color/black"
            android:textSize="@dimen/history_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>